app/assets/stylesheets/user_post_index.css
body{
  /*overflow: scroll;*/
  /*height: 1000px;*/
  margin: 0;
}
.container{
  position: relative;
  height:100%;
  width: 100% ! important;
  padding-right: 0 !important;
  padding-left: 0 !important;
}
.top-image{
  position: relative;
  height: 250px;
  padding: 0px !important;
}
.background-image{
  height:100%;
  width: 100%;
  background-position: center;
  background-size: 100%;
  background-repeat: no-repeat;
  background-image: url('http://i.imgur.com/niOeX5G.jpg');
}
.profile-pic{
  max-width: 150px;
}
.profile-pic-container{
  height: 150px;
  width: 150px;
  overflow: hidden;
  border: 3px solid white;
  margin-top: -70px;
  margin-left: 20px;
  border-radius: 50%;
}
#blog-title{
  margin-top: 10px;
  margin-bottom: 40px;
  text-align: center;
  line-height: 3;
}
h1#title {
  font-family: "ff-prater-script-web",sans-serif;
  margin: 0;
  font-size: 45px;
}
h4{
  margin: 0;
}
.post-title{
  color: black;
}
.body-text{
  padding: 20px;
}
.post{
  position: relative;
  min-height: 50px;
  border-bottom: 1px solid black;
  font-family: 'Source Sans Pro', sans-serif;
  text-align: center;
}
.new-post{
  margin-top: 20px;
  margin-left: 40px;
  margin-bottom: 20px;
}
.twitter-button{
  position: fixed;
  top: 400px;
  right: 50px;
}

